added map in html

--- a/assets/scss/partials/_contact.scss
+++ b/assets/scss/partials/_contact.scss
@@ -3,6 +3,94 @@ section#contact {
 
     .contact-left {
         color: var(--color-white);
+        position: relative;
+
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 85px;
+            height: 47px;
+        }
+
+        /* Hide default HTML checkbox */
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        /* The slider */
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "info";
+            text-align: center;
+            padding-top: 7px;
+            color: var(--color-primary-dark);
+            height: 40px;
+            width: 40px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        input:checked+.slider {
+            background-color: var(--color-primary-dark);
+
+        }
+
+        input:focus+.slider {
+            box-shadow: 0 0 1px #2196F3;
+        }
+
+        input:checked+.slider:before {
+            -webkit-transform: translateX(36px);
+            -ms-transform: translateX(36px);
+            transform: translateX(36px);
+            content: "map";
+        }
+
+        /* Rounded sliders */
+        .slider.round {
+            border-radius: 34px;
+        }
+
+        .slider.round:before {
+            border-radius: 50%;
+        }
+
+        .map {
+            position: absolute;
+            background-color: var(--color-white);
+            height: 45rem;
+            top: -5.813rem;
+            visibility: hidden;
+
+            span {
+                font-size: 2.25rem;
+                font-weight: bold;
+                color: var(--color-primary-dark);
+            }
+
+            iframe {
+                width: 100%;
+                height: 58%;
+                box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            }
+        }
 
         .head-text {
             span {
@@ -90,6 +178,43 @@ section#contact {
                     }
                 }
             }
+        }
+    }
+
+    .contact-right {
+        background-color: var(--color-white);
+        height: 45rem;
+
+        h2 {
+            color: var(--color-primary-dark);
+            font-size: 4rem;
+            font-weight: bold;
+        }
+
+        .form-element {
+            border: none;
+            background-color: #37c954bd;
+            color: var(--color-primary-dark);
+            border-radius: 0;
+            resize: none;
+            color: var(--color-primary-dark);
+            font-weight: bold;
+            font-size: 1.5rem;
+
+
+            &:focus {
+                outline: var(--color-primary-dark);
+            }
+
+            &::placeholder {
+                color: var(--color-primary-dark);
+                font-weight: bold;
+                font-size: 1.5rem;
+            }
+        }
+
+        input.form-element {
+            height: 5rem;
         }
     }
 }
