--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,6 +45,94 @@ section#contact {
 
 section#contact .contact-left {
   color: var(--color-white);
+  position: relative;
+  /* Hide default HTML checkbox */
+  /* The slider */
+  /* Rounded sliders */
+}
+
+section#contact .contact-left .switch {
+  position: relative;
+  display: inline-block;
+  width: 85px;
+  height: 47px;
+}
+
+section#contact .contact-left .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+section#contact .contact-left .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+section#contact .contact-left .slider:before {
+  position: absolute;
+  content: "info";
+  text-align: center;
+  padding-top: 7px;
+  color: var(--color-primary-dark);
+  height: 40px;
+  width: 40px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+section#contact .contact-left input:checked + .slider {
+  background-color: var(--color-primary-dark);
+}
+
+section#contact .contact-left input:focus + .slider {
+  -webkit-box-shadow: 0 0 1px #2196F3;
+          box-shadow: 0 0 1px #2196F3;
+}
+
+section#contact .contact-left input:checked + .slider:before {
+  -webkit-transform: translateX(36px);
+  transform: translateX(36px);
+  content: "map";
+}
+
+section#contact .contact-left .slider.round {
+  border-radius: 34px;
+}
+
+section#contact .contact-left .slider.round:before {
+  border-radius: 50%;
+}
+
+section#contact .contact-left .map {
+  position: absolute;
+  background-color: var(--color-white);
+  height: 45rem;
+  top: -5.813rem;
+  visibility: hidden;
+}
+
+section#contact .contact-left .map span {
+  font-size: 2.25rem;
+  font-weight: bold;
+  color: var(--color-primary-dark);
+}
+
+section#contact .contact-left .map iframe {
+  width: 100%;
+  height: 58%;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 section#contact .contact-left .head-text span {
@@ -127,5 +215,59 @@ section#contact .contact-left .socials .icon-holder .tw {
 section#contact .contact-left .socials .icon-holder .tw:hover {
   background-color: var(--color-white);
   color: #1DA1F2;
+}
+
+section#contact .contact-right {
+  background-color: var(--color-white);
+  height: 45rem;
+}
+
+section#contact .contact-right h2 {
+  color: var(--color-primary-dark);
+  font-size: 4rem;
+  font-weight: bold;
+}
+
+section#contact .contact-right .form-element {
+  border: none;
+  background-color: #37c954bd;
+  color: var(--color-primary-dark);
+  border-radius: 0;
+  resize: none;
+  color: var(--color-primary-dark);
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+section#contact .contact-right .form-element:focus {
+  outline: var(--color-primary-dark);
+}
+
+section#contact .contact-right .form-element::-webkit-input-placeholder {
+  color: var(--color-primary-dark);
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+section#contact .contact-right .form-element:-ms-input-placeholder {
+  color: var(--color-primary-dark);
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+section#contact .contact-right .form-element::-ms-input-placeholder {
+  color: var(--color-primary-dark);
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+section#contact .contact-right .form-element::placeholder {
+  color: var(--color-primary-dark);
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+section#contact .contact-right input.form-element {
+  height: 5rem;
 }
 /*# sourceMappingURL=main.css.map */
