--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,4 +38,148 @@ body {
   font-family: var(--font-main);
   overflow: hidden;
 }
+
+footer {
+  background-color: #0B1D24;
+}
+
+.footer {
+  width: 100%;
+}
+
+.footer .join h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 72px;
+}
+
+.footer hr {
+  border: 3px solid rgba(242, 242, 242, 0.25);
+}
+
+.footer .text-span span {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 54px;
+  letter-spacing: 0.05em;
+  text-transform: capitalize;
+  color: #F2F2F2;
+}
+
+.footer button {
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+  padding-bottom: .8rem;
+  margin-left: -3px;
+  background: #185A23;
+  border: none;
+  font-weight: lighter;
+  border-radius: 5px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.footer button:hover {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background: #12461a;
+}
+
+.footer button::after {
+  content: ' \2192';
+  font-size: 2.5rem;
+}
+
+.footer .input input {
+  color: #0B1D24;
+  padding-left: 30px;
+  width: 250px;
+  height: 50px;
+  border: none;
+  border-radius: 5px;
+  width: 40%;
+  height: 100px;
+  background: rgba(55, 201, 85, 0.75);
+  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  color: rgba(11, 29, 36, 0.75);
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  letter-spacing: 0.05em;
+  text-transform: capitalize;
+}
+
+.footer .input input::-webkit-input-placeholder {
+  color: white !important;
+}
+
+.footer .input input:-ms-input-placeholder {
+  color: white !important;
+}
+
+.footer .input input::-ms-input-placeholder {
+  color: white !important;
+}
+
+.footer .input input::placeholder {
+  color: white !important;
+}
+
+.footer a {
+  text-decoration: none;
+  margin: 0 40px 40px 0;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 45px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  color: #FFFFFF;
+}
+
+.footer a:hover {
+  color: #185A23 !important;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.footer .FooterSocialIcons {
+  list-style: none;
+  font-size: 20px;
+}
+
+.footer .FooterSocialIcons li {
+  display: inline-block;
+  padding-top: 3px;
+  margin-right: 32px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: rgba(55, 201, 85, 0.75);
+  color: #0B1D24;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.footer .FooterSocialIcons li:hover {
+  background-color: #0B1D24;
+  color: rgba(55, 201, 85, 0.75);
+  -webkit-transition: 1s;
+  transition: 1s;
+  -webkit-transform: scale(1.3, 1.3);
+          transform: scale(1.3, 1.3);
+}
+
+.footer img {
+  width: 150px;
+}
+
+.footer .info-about-site {
+  font-size: 12px;
+}
 /*# sourceMappingURL=main.css.map */
