--- a/assets/scss/partials/_footer.scss
+++ b/assets/scss/partials/_footer.scss
@@ -8,8 +8,8 @@ footer{
     .join h2{
         font-style: normal;
         font-weight: 700;
-        font-size: 48px;
-        line-height: 72px;
+        font-size: 3rem;
+        line-height: 4.5rem;
     }
     hr{
         border: 3px solid rgba(242, 242, 242, 0.25);
@@ -17,8 +17,8 @@ footer{
     .text-span span{
         font-style: normal;
         font-weight: 700;
-        font-size: 36px;
-        line-height: 54px;
+        font-size: 2.25rem;
+        line-height: 3.375rem;
 
         letter-spacing: 0.05em;
         text-transform: capitalize;
@@ -27,15 +27,15 @@ footer{
     }
 
     button{
-        width: 100px;
-        height: 100px;
+        width: 6.25rem;
+        height: 6.25rem;
         cursor: pointer;
         padding-bottom: .8rem;
-        margin-left: -3px ;
+        margin-left: -0.188rem;
         background: #185A23;
         border: none;
         font-weight: lighter;
-        border-radius: 5px;
+        border-radius: 0.313rem;
         transition: 0.5s;
     }
     button:hover{
@@ -50,14 +50,14 @@ footer{
 
     .input input{
         color: #0B1D24;
-        padding-left: 30px;
-        width: 250px;
-        height: 50px;
+        padding-left: 1.875rem;
+        width: 15.625rem;
+        height: 3.125rem;
         border: none;
-        border-radius: 5px;
+        border-radius: 0.313rem;
 
         width: 40%;
-        height: 100px;
+        height: 6.25rem;
 
         background: rgba(55, 201, 85, 0.75);
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -65,8 +65,8 @@ footer{
         color: rgba(11, 29, 36, 0.75);
         font-style: normal;
         font-weight: 600;
-        font-size: 24px;
-        line-height: 36px;
+        font-size: 1.5rem;
+        line-height: 2.25rem;
 
         letter-spacing: 0.05em;
         text-transform: capitalize;
@@ -81,8 +81,8 @@ footer{
 
         font-style: normal;
         font-weight: 700;
-        font-size: 30px;
-        line-height: 45px;
+        font-size: 1.875rem;
+        line-height: 2.813rem;
         transition: 0.5s;
         color: #FFFFFF;
 
@@ -94,19 +94,23 @@ footer{
     
     .FooterSocialIcons{
         list-style: none;
-        font-size: 20px;
+        font-size: 1.25rem;
 
         li{
             display: inline-block;
-            padding-top: 3px;
-            margin-right: 32px;
+            padding-top: 0.188rem;
+            margin-right: 2rem;
             
-            width: 40px;
-            height: 40px;
+            width: 2.5rem;
+            height: 2.5rem;
             border-radius: 50%;
             background: rgba(55, 201, 85, 0.75);
             color: #0B1D24;
             transition: 0.5s;
+            
+            i{
+                vertical-align: -0.13rem !important;
+            }
         }
         li:hover{
             background-color: #0B1D24;
@@ -117,10 +121,10 @@ footer{
     }
 
     img{
-        width: 150px;
+        width: 9.375rem;
     }
 
     .info-about-site{
-        font-size: 12px;
+        font-size: 0.75rem;
     }
 }
