--- a/assets/scss/partials/_footer.scss
+++ b/assets/scss/partials/_footer.scss
@@ -1,5 +1,5 @@
 footer{
-    background-color: #0B1D24;
+    background-color: var(--color-dark);
 }
 
 .footer {
@@ -22,7 +22,7 @@ footer{
         letter-spacing: 0.05em;
         text-transform: capitalize;
 
-        color: #F2F2F2;
+        color: var(--color-white);
     }
 
     button{
@@ -31,7 +31,7 @@ footer{
         cursor: pointer;
         padding-bottom: .8rem;
         margin-left: -0.188rem;
-        background: #185A23;
+        background: var(--color-primary-dark);
         border: none;
         font-weight: lighter;
         border-radius: 0.313rem;
@@ -40,6 +40,7 @@ footer{
     button:hover{
         transition: 0.5s;
         background: #12461a;
+        // ^hover bg-color əlavə
     }
     button::after {
         content: ' \2192';
@@ -48,7 +49,7 @@ footer{
 
 
     .input input{
-        color: #0B1D24;
+        color: var(--color-dark);
         padding-left: 1.875rem;
         width: 15.625rem;
         height: 3.125rem;
@@ -58,7 +59,7 @@ footer{
         width: 40%;
         height: 6.25rem;
 
-        background: rgba(55, 201, 85, 0.75);
+        background: var(--color-primary-light);
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 
         color: rgba(11, 29, 36, 0.75);
@@ -85,11 +86,11 @@ footer{
         font-size: 1.875rem;
         line-height: 2.813rem;
         transition: 0.5s;
-        color: #FFFFFF;
+        color: var(--color-white);
 
     }
     .footer-main a:hover{
-        color: #185A23 !important;
+        color: var(--color-primary-dark) !important;
         transition: 1s;
     }
     
@@ -106,13 +107,13 @@ footer{
             height: 2.5rem;
             border-radius: 50%;
             background: rgba(55, 201, 85, 0.75);
-            color: #0B1D24;
+            color: var(--color-dark);
             transition: 0.5s;
 
             
         }
         li:hover{
-            background-color: #0B1D24;
+            background-color: var(--color-dark);
             color: rgba(55, 201, 85, 0.75);
             transition: 1s;
             transform: scale(1.3,1.3);
