--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,6 @@
 @import "./partials/colors";
 @import "./partials/fonts";
 @import "./partials/reset";
+@import "./partials/about";
+
+@import "./partials/contact";
