I took latest one from development, add about sec

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,9 @@
 @import "./partials/colors";
 @import "./partials/fonts";
 @import "./partials/reset";
-@import "./partials/about";
 
+@import "./partials/footer";
+@import "./partials/hikes";
 @import "./partials/contact";
+@import "./partials/hikes";
+@import "./partials/about";
