--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -130,6 +130,7 @@ section#contact .contact-left .map {
   opacity: 0;
   -webkit-transition: .4s;
   transition: .4s;
+  border-radius: 5px;
 }
 
 section#contact .contact-left .map span {
@@ -179,8 +180,8 @@ section#contact .contact-left .socials .icon-holder {
 section#contact .contact-left .socials .icon-holder a {
   color: var(--color-white);
   cursor: pointer;
-  -webkit-transition: .3s;
-  transition: .3s;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
   padding-top: 2px;
 }
 
@@ -237,6 +238,7 @@ section#contact .contact-left .socials .icon-holder .tw:hover {
 section#contact .contact-right {
   background-color: var(--color-white);
   height: 45rem;
+  border-radius: 5px;
 }
 
 section#contact .contact-right h2 {
@@ -245,47 +247,78 @@ section#contact .contact-right h2 {
   font-weight: bold;
 }
 
-section#contact .contact-right .form-element {
-  border: none;
-  background-color: #37c954bd;
-  color: var(--color-primary-dark);
-  border-radius: 0;
-  resize: none;
-  color: var(--color-primary-dark);
-  font-weight: bold;
-  font-size: 1.5rem;
-}
-
-section#contact .contact-right .form-element:focus {
-  outline: var(--color-primary-dark);
-}
-
-section#contact .contact-right .form-element::-webkit-input-placeholder {
-  color: var(--color-primary-dark);
-  font-weight: bold;
-  font-size: 1.5rem;
-}
-
-section#contact .contact-right .form-element:-ms-input-placeholder {
-  color: var(--color-primary-dark);
-  font-weight: bold;
-  font-size: 1.5rem;
-}
-
-section#contact .contact-right .form-element::-ms-input-placeholder {
-  color: var(--color-primary-dark);
-  font-weight: bold;
-  font-size: 1.5rem;
-}
-
-section#contact .contact-right .form-element::placeholder {
-  color: var(--color-primary-dark);
-  font-weight: bold;
-  font-size: 1.5rem;
-}
-
-section#contact .contact-right input.form-element {
+section#contact .contact-right form .form-input {
   height: 5rem;
+  position: relative;
+  font-size: 1.5rem;
+  font-weight: bold;
+  overflow: hidden;
+}
+
+section#contact .contact-right form .form-input input {
+  height: 100%;
+  width: 100%;
+  border: none;
+  background-color: var(--color-white);
+}
+
+section#contact .contact-right form .form-input input:focus + .label-name .content-name,
+section#contact .contact-right form .form-input input:valid + .label-name .content-name {
+  -webkit-transform: translateY(-120%);
+          transform: translateY(-120%);
+  font-size: 1.5rem;
+  color: var(--color-primary-dark);
+}
+
+section#contact .contact-right form .form-input input:focus + .label-name::after {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+}
+
+section#contact .contact-right form .form-input .label-name {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  pointer-events: none;
+  border-bottom: 1px solid var(--color-primary-light);
+  font-size: 2rem;
+  color: var(--color-dark);
+}
+
+section#contact .contact-right form .form-input .label-name::after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border-bottom: 4px solid var(--color-primary-dark);
+  left: 0;
+  bottom: -2px;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+section#contact .contact-right form .form-input .label-name .content-name {
+  position: absolute;
+  bottom: 5px;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+section#contact .contact-right form .sub-btn {
+  border: 2px solid var(--color-primary-light);
+  color: var(--color-primary-dark);
+  font-weight: bold;
+  font-size: 1.5rem;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+section#contact .contact-right form .sub-btn:hover {
+  background-color: var(--color-primary-light);
 }
 
 footer {
