--- a/assets/scss/partials/_contact.scss
+++ b/assets/scss/partials/_contact.scss
@@ -88,6 +88,7 @@ section#contact {
             width: 100%;
             opacity: 0;
             transition: .4s;
+            border-radius: 5px;
 
             span {
                 font-size: 2.25rem;
@@ -144,7 +145,7 @@ section#contact {
                 a {
                     color: var(--color-white);
                     cursor: pointer;
-                    transition: .3s;
+                    transition: all .3s ease;
                     padding-top: 2px;
                 }
 
@@ -204,6 +205,7 @@ section#contact {
     .contact-right {
         background-color: var(--color-white);
         height: 45rem;
+        border-radius: 5px;
 
         h2 {
             color: var(--color-primary-dark);
@@ -211,30 +213,107 @@ section#contact {
             font-weight: bold;
         }
 
-        .form-element {
-            border: none;
-            background-color: #37c954bd;
-            color: var(--color-primary-dark);
-            border-radius: 0;
-            resize: none;
-            color: var(--color-primary-dark);
-            font-weight: bold;
-            font-size: 1.5rem;
+        form {
 
 
-            &:focus {
-                outline: var(--color-primary-dark);
+            .form-input {
+                height: 5rem;
+                position: relative;
+                font-size: 1.5rem;
+                font-weight: bold;
+                overflow: hidden;
+
+                input {
+                    height: 100%;
+                    width: 100%;
+                    border: none;
+                    // outline: none;
+                    background-color: var(--color-white);
+
+                    &:focus+.label-name .content-name,
+                    &:valid+.label-name .content-name {
+                        transform: translateY(-120%);
+                        font-size: 1.5rem;
+                        color: var(--color-primary-dark);
+                    }
+
+                    &:focus+.label-name::after {
+                        transform: translateX(0%);
+                    }
+
+                }
+
+                .label-name {
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    height: 100%;
+                    width: 100%;
+                    pointer-events: none;
+                    border-bottom: 1px solid var(--color-primary-light);
+                    font-size: 2rem;
+                    color: var(--color-dark);
+
+
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        height: 100%;
+                        width: 100%;
+                        border-bottom: 4px solid var(--color-primary-dark);
+                        left: 0;
+                        bottom: -2px;
+                        transform: translateX(-100%);
+                        transition: all .3s ease;
+                    }
+
+                    .content-name {
+                        position: absolute;
+                        bottom: 5px;
+                        transition: all .3s ease;
+                    }
+                }
             }
 
-            &::placeholder {
+            .sub-btn {
+                border: 2px solid var(--color-primary-light);
                 color: var(--color-primary-dark);
                 font-weight: bold;
                 font-size: 1.5rem;
+                transition: all .3s ease;
+
+                &:hover {
+                    background-color: var(--color-primary-light);
+                }
             }
         }
 
-        input.form-element {
-            height: 5rem;
-        }
+        // .form-element {
+        //     border: none;
+        //     background-color: #37c954bd;
+        //     color: var(--color-primary-dark);
+        //     border-radius: 5px;
+        //     resize: none;
+        //     color: var(--color-primary-dark);
+        //     font-weight: bold;
+        //     font-size: 1.5rem;
+
+
+        //     &:focus {
+        //         outline: var(--color-primary-dark);
+        //     }
+
+        //     &::placeholder {
+        //         color: var(--color-primary-dark);
+        //         font-weight: bold;
+        //         font-size: 1.5rem;
+        //     }
+        // }
+
+
+
+        // input.form-element {
+        //     height: 5rem;
+        // }
     }
 }
