--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -385,7 +385,7 @@ section#contact .contact-right form .sub-btn:hover {
 }
 
 footer {
-  background-color: var(--color-dark);
+  background: var(--color-dark);
 }
 
 .footer {
@@ -413,47 +413,37 @@ footer {
   color: var(--color-white);
 }
 
-.footer button {
-  width: 6.25rem;
-  height: 6.25rem;
+.footer .arrow-span {
+  width: 3rem;
+  font-size: 1.5rem;
+  height: 4rem;
   cursor: pointer;
-  padding-bottom: .8rem;
-  margin-left: -0.188rem;
+  font-weight: lighter;
   background: var(--color-primary-dark);
   border: none;
-  font-weight: lighter;
-  border-radius: 0.313rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
-.footer button:hover {
+.footer .arrow-span:hover {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   background: #12461a;
 }
 
-.footer button::after {
-  content: ' \2192';
-  font-size: 2.5rem;
+.footer .input {
+  width: 35%;
+  margin: 0 auto;
 }
 
 .footer .input input {
   color: var(--color-dark);
   padding-left: 1.875rem;
-  width: 15.625rem;
-  height: 3.125rem;
   border: none;
-  border-radius: 0.313rem;
-  width: 40%;
-  height: 6.25rem;
   background: var(--color-primary-light);
   -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  color: rgba(11, 29, 36, 0.75);
-  font-style: normal;
   font-weight: 600;
-  font-size: 1.5rem;
   line-height: 2.25rem;
   letter-spacing: 0.05em;
   text-transform: capitalize;
@@ -461,18 +451,22 @@ footer {
 
 .footer .input input::-webkit-input-placeholder {
   color: white !important;
+  font-size: large;
 }
 
 .footer .input input:-ms-input-placeholder {
   color: white !important;
+  font-size: large;
 }
 
 .footer .input input::-ms-input-placeholder {
   color: white !important;
+  font-size: large;
 }
 
 .footer .input input::placeholder {
   color: white !important;
+  font-size: large;
 }
 
 .footer .footer-main a {
@@ -504,26 +498,103 @@ footer {
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 50%;
-  background: rgba(55, 201, 85, 0.75);
+  background: linear-gradient(45deg, var(--color-primary-dark), var(--color-primary-light), var(--color-primary-dark));
   color: var(--color-dark);
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
 .footer .footer-social-icons li:hover {
+  background: linear-gradient(45deg, var(--color-primary-dark), var(--color-dark), var(--color-primary-dark));
   background-color: var(--color-dark);
-  color: rgba(55, 201, 85, 0.75);
+  color: var(--color-primary-light);
   -webkit-transition: 1s;
   transition: 1s;
   -webkit-transform: scale(1.3, 1.3);
           transform: scale(1.3, 1.3);
 }
 
-.footer img {
-  width: 9.375rem;
-}
-
 .footer .info-about-site {
   font-size: 0.75rem;
+}
+
+.footer .footer-logo {
+  width: 12rem;
+}
+
+@media screen and (max-width: 1200px) {
+  .footer .my-5 {
+    margin-top: 0.5rem !important;
+    margin-bottom: 2rem !important;
+  }
+  .footer hr {
+    border: 1px solid rgba(242, 242, 242, 0.25);
+  }
+  .footer .join .footer-text {
+    font-size: 1.5rem;
+    margin: 0;
+  }
+  .footer .text-span span {
+    font-size: 1.2rem;
+    margin: 0;
+    padding: 0;
+  }
+  .footer .input {
+    width: 40%;
+  }
+  .footer .input input {
+    height: 2.125rem;
+    margin: 0;
+    padding: 0;
+    padding-left: 10px;
+    font-size: xx-small;
+  }
+  .footer .input input::-webkit-input-placeholder {
+    font-size: xx-small;
+  }
+  .footer .input input:-ms-input-placeholder {
+    font-size: xx-small;
+  }
+  .footer .input input::-ms-input-placeholder {
+    font-size: xx-small;
+  }
+  .footer .input input::placeholder {
+    font-size: xx-small;
+  }
+  .footer .arrow-span {
+    height: 2.125rem;
+    font-size: 1rem;
+    width: 100%;
+  }
+  .footer .footer-main a {
+    font-size: 1.2rem;
+    margin: 0;
+  }
+  .footer .community {
+    font-size: 0.9rem;
+  }
+  .footer .footer-social-icons li {
+    padding-top: 3.5px;
+    width: 1.5rem;
+    height: 1.5rem;
+    font-size: 0.75rem;
+  }
+  .footer .info-about-site {
+    font-size: 0.5rem;
+  }
+  .footer .footer-logo {
+    width: 8rem;
+  }
+}
+
+@media screen and (max-width: 326px) {
+  .footer .input {
+    width: 60%;
+  }
+  .footer .footer-social-icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 /*# sourceMappingURL=main.css.map */
